- Adding category id and names as string resource arrays for usage across different screens - Set up android resources object as something that can be injected

--- a/.gitignore
+++ b/.gitignore
@@ -179,3 +179,4 @@ $RECYCLE.BIN/
 *.lnk
 app/src/main/res/raw/third_party_license_metadata
 app/src/main/res/raw/third_party_licenses
+projectFilesBackup/
